add margin-right: 126px; in style.css  and change all directorys in index.html

--- a/Task_02/index.html
+++ b/Task_02/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task_02</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/Task_02/styles/style.css">
 </head>
 <style>
 
 </style>
 <body>
     <header>
-        <img src="/assets/LOGO.png" alt="LOGO">
+        <img src="/Task_02/assets/LOGO.png" alt="LOGO">
         <div>
         <button id="button-one">Blog</button>
         <span>Sobre mim</span>
-        <img id="img-one" src="/assets/Group 3.png" alt="Group">
+        <img id="img-one" src="/Task_02/assets/Group 3.png" alt="Group">
         <button id="button-contato">Contato</button>
         </div>
     </header>
@@ -23,7 +23,7 @@
     <main>
         <div id="div-container-one">
             <div>
-            <img id="img-three" src="/assets/Rectangle 917.png" alt="Rectangle">
+            <img id="img-three" src="/Task_02/assets/Rectangle 917.png" alt="Rectangle">
             <div id="div-container-two">
                 <h3>Carreira</h3>
                 <span id="span-one">18 Mar. 2023</span>
@@ -35,7 +35,7 @@
             <div id="div-one">
                 <ul>
                     <h1 id="h1-one">CATEGORIAS</h1>
-                    <img src="/assets/Line 2.png" alt="Line">
+                    <img src="/Task_02/assets/Line 2.png" alt="Line">
                     <li class="li_one">Carreira</li>
                     <li class="li_one">Back-end</li>
                     <li class="li_one">Front-end</li>
@@ -46,7 +46,7 @@
         </div>
             <div id="div-container-three">
                 <div>
-                    <img class="img_set" src="/assets/Rectangle 1.png" alt="Rectangle">
+                    <img class="img_set" src="/Task_02/assets/Rectangle 1.png" alt="Rectangle">
                     <div class="div-three">
                     <h3 class="h3_set">Carreira</h3>
                     <span class="span_set span-one">18 Mar. 2023</span>
@@ -55,7 +55,7 @@
                     <span class="span_set">As principais lições e dicas compiladas para quem está começando na programação ou migrando para a área.</span>
                 </div>
                 <div>
-                    <img class="img_set" src="/assets/Rectangle 2.png" alt="Rectangle">
+                    <img class="img_set" src="/Task_02/assets/Rectangle 2.png" alt="Rectangle">
                     <div class="div-three">
                     <h3 class="h3_set">Carreira</h3>
                     <span class="span_set span-one">18 Mar. 2023</span>
@@ -64,7 +64,7 @@
                     <span class="span_set">As principais lições e dicas compiladas para quem está começando na programação ou migrando para a área.</span>
                 </div>
                 <div>
-                    <img class="img_set" src="/assets/Rectangle 3.png" alt="Rectangle">
+                    <img class="img_set" src="/Task_02/assets/Rectangle 3.png" alt="Rectangle">
                     <div class="div-three">
                     <h3 class="h3_set">Carreira</h3>
                     <span class="span_set span-one">18 Mar. 2023</span>
@@ -73,7 +73,7 @@
                     <span class="span_set">As principais lições e dicas compiladas para quem está começando na programação ou migrando para a área.</span>
                 </div>
                 <div>
-                    <img class="img_set" src="/assets/Rectangle 4.png" alt="Rectangle">
+                    <img class="img_set" src="/Task_02/assets/Rectangle 4.png" alt="Rectangle">
                     <div class="div-three">
                     <h3 class="h3_set">Carreira</h3>
                     <span class="span_set span-one">18 Mar. 2023</span>
@@ -82,7 +82,7 @@
                     <span class="span_set">As principais lições e dicas compiladas para quem está começando na programação ou migrando para a área.</span>
                 </div>
                 <div>
-                    <img class="img_set" src="/assets/Rectangle 5.png" alt="Rectangle">
+                    <img class="img_set" src="/Task_02/assets/Rectangle 5.png" alt="Rectangle">
                     <div class="div-three">
                     <h3 class="h3_set">Carreira</h3>
                     <span class="span_set span-one">18 Mar. 2023</span>
@@ -91,7 +91,7 @@
                     <span class="span_set">As principais lições e dicas compiladas para quem está começando na programação ou migrando para a área.</span>
                 </div>
                 <div>
-                    <img class="img_set" src="/assets/Rectangle 6.png" alt="Rectangle">
+                    <img class="img_set" src="/Task_02/assets/Rectangle 6.png" alt="Rectangle">
                     <div class="div-three">
                     <h3 class="h3_set">Carreira</h3>
                     <span class="span_set span-one">18 Mar. 2023</span>
@@ -119,15 +119,15 @@
                  como Node.JS, React.JS, Vue.js e Typescript.</span>
             </div>
             <div id="div-info-two">
-                <img id="img-for" src="/assets/REDES SOCIAIS.png" alt="REDES SOCIAIS">
+                <img id="img-for" src="/Task_02/assets/REDES SOCIAIS.png" alt="REDES SOCIAIS">
                 <span>Blog</span>
                 <span>Sobre mim</span>
                 <span>Pedir proposta</span>
-                <img src="/assets/Group 3.png" alt="Group">
+                <img src="/Task_02/assets/Group 3.png" alt="Group">
             </div>
         </div>
         <div id="div-end">
-            <img src="/assets/LOGO.png" alt="LOGO">
+            <img src="/Task_02/assets/LOGO.png" alt="LOGO">
         </div>
     </footer>
 </body>
